--- a/app/page.module.css
+++ b/app/page.module.css
@@ -91,6 +91,7 @@ a.primary {
 
 a.secondary {
   border-color: var(--button-secondary-border);
+  color:#fff;
 }
 
 /* Enable hover only on non-touch devices */
