--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+@layer base {
+  *, *::before, *::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    /* other reset styles */
+  }
+}
